Atualização do curso

--- a/Aulas/02 - CSS Básico/style_box_model.css
+++ b/Aulas/02 - CSS Básico/style_box_model.css
@@ -14,8 +14,9 @@ body{
     background-color: #ddd;
     border: 5px solid green;
     padding: 5px;
+    /* margin: 5px*/
+    /* outline: 5px solid green;*/
 }
-
 
 .square{
     background-color: yellow;
