--- a/Aulas/02 - CSS Básico/style_estilos_de_link.css
+++ b/Aulas/02 - CSS Básico/style_estilos_de_link.css
@@ -6,6 +6,9 @@
     padding-bottom: 5px;    
     border-radius: 8px;
     border: 2px solid #bc2035
+    /* cursor: crosshair;
+       background-color: #bc2035;
+    */
 }
 
 .links:visited{
