--- a/Aulas/style.css
+++ b/Aulas/style.css
@@ -1,46 +1,32 @@
-div{
-    width: 200px;
-    height: 200px;
+.video {
+    width: 100%;
+    
+}
+
+button {
+    font-size: 20px;
+}
+
+.v-container {
+    position: relative;
+    width: 540px;
+    margin-bottom: 10px;
+}
+
+.control {
     position: absolute;
-    color: white;
-    line-height: 200px;
-    text-transform: uppercase;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.2);
     text-align: center;
-}
-.div_color_first{
-    background-color: red;
-    position: absolute;
-    right: 0;
-    top: 0;
+    display: none;
 }
 
-.div_color_second{
-    background-color: orange;
-   
-}
-
-.div_color_third{
-    background-color: green;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.div_color_fourth{
-    background-color: teal;
-    position: absolute;
-    left: 50%;
-    top: 72%;
-    transform: translate(-50%, -50%);
-}
-
-.div_color_last{
-    background-color: blue;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+.btn {
+    position: relative;
+    width: 10%;
+    padding: 2%;
+    top: 100%;
+    transform: translateY(-100%)
 }
